<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Filmoteca</string>

    <string name="creator">Created by Dianelys Saldaña</string>
    <string name="web">Go to website</string>
    <string name="support">Obtain support</string>
    <string name="back">Go back</string>

    <string name="toast">Functionality not implemented yet</string>
    <string name="contentDescr">Profile picture</string>
    <string name="chooser">Complete action using</string>

    <string name="p1">See Little Miss Sunshine</string>
    <string name="p2">See Booksmart</string>
    <string name="about">About</string>
    <string name="p1extra">Little Miss Sunshine</string>
    <string name="p2extra">Booksmart</string>

    <string name="details">Movie details</string>
    <string name="related">See related movies</string>
    <string name="edit">Edit movie</string>
    <string name="main">Main menu</string>
    <string name="p3extra">Movie C</string>

    <string name="editing">Editing movie</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edited">Film edited successfully</string>
    <string name="canceled">Edit canceled</string>

    <string name="p1Title">Little Miss Sunshine</string>
    <string name="p1Dir">Director: Jonathan Dayton</string>
    <string name="p1YearText">Year: 2006</string>
    <string name="p1GenreText">Genre: Comedy, Drama</string>
    <string name="p1FormatText">Format: HD</string>
    <string name="p1ImdbText">IMDB</string>

    <string name="p2Title">Little Miss Sunshine</string>
    <string name="p2Dir">Director: Jonathan Dayton</string>
    <string name="p2YearText">Year: 2006</string>
    <string name="p2GenreText">Genre: Comedy, Drama</string>
    <string name="p2FormatText">Format: HD</string>
    <string name="p2ImdbText">IMDB</string>

    <string name="takePhoto">Take photo</string>
    <string name="selectImg">Select image</string>
    <string name="titleHint">Movie title</string>
    <string name="dirHint">Director\'s name</string>
    <string name="yearHint">Release year</string>
    <string name="imdbHint">IMDB link</string>
    <string name="commentsHint">Comments</string>

    <string name="chooseGenre">Choose the genre</string>
    <string name="chooseFormat">Choose the format</string>

    <string name="addFilm">Add film</string>
    <string name="aboutApp">About</string>

    <string name="newFilm">New film</string>
    <string name="newDir">Director</string>
</resources>