<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/filmDataContainer">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contentDescr"
        android:scaleType="centerCrop"
        android:src="@drawable/poster"
        android:layout_margin="30dp"/>

    <LinearLayout
        android:id="@+id/boxLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/poster"
        android:orientation="vertical"
        android:layout_alignTop="@+id/poster">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/p1Dir" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/p1YearText" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/p1GenreText" />

        <TextView
            android:id="@+id/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/p1FormatText" />
    </LinearLayout>

    <Button
        android:id="@+id/imdb"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/p1ImdbText"
        android:lines="2"
        android:layout_toEndOf="@+id/poster"
        android:layout_below="@+id/boxLayout" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imdb"
        android:orientation="horizontal"
        android:layout_margin="35dp">

        <Button
            android:id="@+id/main"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:lines="2"/>

        <Button
            android:id="@+id/edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/edit"
            android:lines="2"/>
    </LinearLayout>
</RelativeLayout>
